--- a/Core/packages.config
+++ b/Core/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Fody" version="6.6.4" targetFramework="net481" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net481" />
+  <package id="Ninject" version="3.3.6" targetFramework="net481" />
   <package id="PropertyChanged.Fody" version="4.1.0" targetFramework="net481" />
 </packages>
