--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Fody" version="6.6.4" targetFramework="net481" developmentDependency="true" />
+  <package id="Ninject" version="3.3.6" targetFramework="net481" />
   <package id="PropertyChanged.Fody" version="4.1.0" targetFramework="net481" />
 </packages>
