--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ViewModel\Chat\ChatListViewModel.cs" />
     <Compile Include="ViewModel\Chat\Disign\ChatListDisignModel.cs" />
     <Compile Include="ViewModel\Chat\Disign\ChatListItemDisignModel.cs" />
+    <Compile Include="ViewModel\RegisterViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
