--- a/wpf_advance.csproj
+++ b/wpf_advance.csproj
@@ -105,6 +105,10 @@
     <Compile Include="Pages\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ValueConverters\SendByMeToBackgroundConverter.cs" />
+    <Compile Include="ValueConverters\SendByMeToAligmentConverter.cs" />
+    <Compile Include="ValueConverters\TimeToReadTimeConverter.cs" />
+    <Compile Include="ValueConverters\TimeToDisplayTimeConverter.cs" />
     <Compile Include="ValueConverters\IoCConverter.cs" />
     <Compile Include="ValueConverters\ApplicationPageValueConverter.cs" />
     <Compile Include="ValueConverters\StringRGBToBrushConverter.cs" />
