--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -60,8 +60,13 @@
     <Compile Include="DataModels\MenuItemType.cs" />
     <Compile Include="Expressions\ExpressionHelper.cs" />
     <Compile Include="Icons\IconTypeToFontAwesome.cs" />
+    <Compile Include="IoC\Interfaces\ILogFactory.cs" />
     <Compile Include="IoC\Interfaces\IUIMenager.cs" />
     <Compile Include="IoC\Base\IoC.cs" />
+    <Compile Include="Logging\Implementation\BaseLogFactory.cs" />
+    <Compile Include="Logging\Core\ILogger.cs" />
+    <Compile Include="Logging\Core\LogFactoryLevel.cs" />
+    <Compile Include="Logging\Implementation\ConsoleLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\SecureStringHelper.cs" />
     <Compile Include="ViewModel\Application\SettingsViewModel.cs" />
